--- a/MILESTONE-1/css/style.css
+++ b/MILESTONE-1/css/style.css
@@ -7,11 +7,23 @@
 /* COMMON */
 header{
     width: 100%;
-    height: 50px;
-    /* test */
-    background-color: cornsilk;
+    height: 70px;
+    display: flex;
+    background-color: #eaeaea;
+    padding: 5px 0;
 }
-/* END COMMON */
+
+img{
+    width: 100%;
+    object-fit: contain;
+}
+
+.text{
+    color: #b1b1b1;
+    font-size: 14px;
+}
+
+
 
 
 /* MAIN PAGE */
@@ -38,15 +50,64 @@ header{
 /* WEB APP */
 .container{
     width: 90%;
+    min-width:800px;
     margin: auto;
-    height:calc(100vh - 80px);
+    height:calc(100vh - 60px);
     position: relative;
-    bottom:100px;
-  
-
+    bottom:110px;
     /* test */
     background-color:chocolate ;
 }
+
+/* header */
+.header-bar{
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    
+}
+.header-bar.left{
+    width: 40%;
+    border-right:1px solid lightgrey;
+    
+}
+.header-bar.right{
+    width: calc(100% - 40%);
+}
+/* header bar */
+.user-info{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    
+}
+.user-options{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content:flex-end;
+}
+
+.user-icon{
+    width: 50px;
+    height: 50px;
+}
+.user-icon img{
+    border-radius: 50%;
+}
+.icons{
+    margin: 0 10px;
+    color: #b1b1b1;
+    font-size: 22px;
+}
+.user-name{
+    font-size: 16px;
+    font-weight: bolder;
+}
+/* end header */
+
 /* END WEB APP */
 
 
