added notification bar

--- a/MILESTONE-1/css/style.css
+++ b/MILESTONE-1/css/style.css
@@ -22,6 +22,14 @@ img{
     color: #b1b1b1;
     font-size: 14px;
 }
+.left{
+    width: 40%;
+    border-right:1px solid lightgrey;
+    
+}
+.right{
+    width: calc(100% - 40%);
+}
 
 
 
@@ -55,8 +63,7 @@ img{
     height:calc(100vh - 60px);
     position: relative;
     bottom:110px;
-    /* test */
-    background-color:chocolate ;
+   
 }
 
 /* header */
@@ -66,14 +73,7 @@ img{
     display: flex;
     
 }
-.header-bar.left{
-    width: 40%;
-    border-right:1px solid lightgrey;
-    
-}
-.header-bar.right{
-    width: calc(100% - 40%);
-}
+
 /* header bar */
 .user-info{
     width: 50%;
@@ -90,23 +90,68 @@ img{
     justify-content:flex-end;
 }
 
-.user-icon{
+.round-icon{
     width: 50px;
     height: 50px;
+    cursor: pointer;
 }
-.user-icon img{
+.round-icon img{
     border-radius: 50%;
 }
 .icons{
     margin: 0 10px;
     color: #b1b1b1;
     font-size: 22px;
+    cursor: pointer;
 }
-.user-name{
+.main-text{
     font-size: 16px;
     font-weight: bolder;
 }
 /* end header */
+/* MAIN */
+.main-app{
+    height: calc(100% - 70px); 
+    display: flex;
+}
+
+/* contacts col */
+.contact-col{
+    height: 100%;
+    /* test */
+    background-color: coral;
+}
+.chat-col{
+    height: 100%;
+    background-color: cornflowerblue;
+}
+.bell{
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    background-color: white;
+    border-radius: 50%;
+    line-height: 50px;
+    text-align:center;
+    margin-right: 10px;
+}
+.bell i{
+    font-size: 20px;
+    color: #8edafb;
+}
+
+.notifications{
+    background-color:#8edafb;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    
+}
+.notifications a{
+    color: grey;
+}
+
 
 /* END WEB APP */
 
