--- a/MILESTONE-1/css/style.css
+++ b/MILESTONE-1/css/style.css
@@ -128,7 +128,7 @@ ul{
 }
 .chat-col{
     height: 100%;
-    background-color: cornflowerblue;
+    
 }
 .bell{
     width: 50px;
@@ -188,6 +188,26 @@ ul{
     overflow: hidden;
     cursor: pointer;
 }
+/* RIGHT COL */
+.send-message{
+    width: 100%;
+    height: 70px;
+    background-color: #e9ebea;
+}
+.chat-list{
+    width: 100%;
+    height:calc(100% - 70px);
+    background-image: url(../img/mine.jpg);
+    background-size: auto;
+    padding: 50px 70px;
+}
+
+.single-chat{
+    padding: 15px;
+    background-color: white;
+    display: inline-block;
+    border-radius: 10px;
+}
 
 
 
@@ -196,6 +216,10 @@ ul{
     background-color: #e9ebea;
 }
 
+.received{
+    color: green;
+    text-align: right;
+}
 
 /* END WEB APP */
 
