--- a/MILESTONE-1/css/style.css
+++ b/MILESTONE-1/css/style.css
@@ -122,14 +122,12 @@ ul{
 }
 
 /* contacts col */
-.contact-col{
+.main-cols{
     height: 100%;
+    overflow: hidden;
   
 }
-.chat-col{
-    height: 100%;
-    
-}
+
 .bell{
     width: 50px;
     height: 50px;
@@ -170,6 +168,7 @@ ul{
 }
 .contacts{
     width: 100%;
+    overflow-y: hidden;
 }
 
 .single-contact{
@@ -200,6 +199,7 @@ ul{
     background-image: url(../img/mine.jpg);
     background-size: auto;
     padding: 50px 80px;
+    overflow-y: hidden;
 }
 
 .single-chat{
