--- a/MILESTONE-1/css/style.css
+++ b/MILESTONE-1/css/style.css
@@ -112,6 +112,7 @@ ul{
 .main-text{
     font-size: 16px;
     font-weight: bolder;
+    
 }
 /* end header */
 
@@ -209,6 +210,7 @@ ul{
     border-radius: 10px;
     line-height: 20px;
     display: inline-block;
+    max-width: 50%;
     
 }
 .timer{
